Solved support for ldpred and lasso

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -19,8 +19,8 @@ conda:
 include: "rules/common.smk"
 include: "rules/preprocess.smk"
 include: "rules/sct_pipeline.smk"
-# include: "rules/prscs_pipeline.smk"
-# include: "rules/ldpred2_pipeline.smk"
+include: "rules/prscs_pipeline.smk"
+include: "rules/ldpred2_pipeline.smk"
 include: "rules/gwas.smk"
 
 # Target rule
@@ -30,4 +30,6 @@ rule all:
     # target_rule_preproc_bychr(),
     # "data/geno/qc_geno_all_map_gendist.rds",
     target_rule_gwas(),
-    **target_rule_sct()
+    **target_rule_prscs(),
+    **target_rule_ldpred2()
+    # **target_rule_sct()
