--- a/workflow/envs/prscs.yaml
+++ b/workflow/envs/prscs.yaml
@@ -4,6 +4,7 @@ channels:
   - bioconda
   - nodefaults
 dependencies:
-  - prscs =1.1.0
-  - scipy
+  - prscs=1.1.0
+  - scipy=1.11
   - h5py
+  - numpy
