--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -30,6 +30,7 @@ rule all:
     # target_rule_preproc_bychr(),
     # "data/geno/qc_geno_all_map_gendist.rds",
     target_rule_gwas(),
-    **target_rule_prscs(),
-    **target_rule_ldpred2()
+    target_rule_prs()
+    # **target_rule_prscs(),
+    # **target_rule_ldpred2()
     # **target_rule_sct()
