--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -8,7 +8,7 @@ configfile: "config/config.yaml"
 
 
 # Setup singularity
-container: "docker://continuumio/miniconda3"
+# container: "docker://continuumio/miniconda3"
 # container: "docker://mambaorg/micromamba"
 
 # Global environment
