Adjust for bim annotation and missing softwares

--- a/workflow/envs/bcftools.yaml
+++ b/workflow/envs/bcftools.yaml
@@ -1,10 +1,9 @@
 channels:
+  - defaults
   - conda-forge
   - bioconda
   - nodefaults
 dependencies:
-  - pandas
-  - numpy
-  - pip
-  - gdown
-  - unzip
+  - samtools
+  - bcftools
+  - tabix
