--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -17,9 +17,9 @@ conda:
 # Load rules
 include: "rules/common.smk"
 include: "rules/preprocess.smk"
-include: "rules/sct_pipeline.smk"
+include: "rules/sct_pipeline_chrom.smk"
 include: "rules/prscs_pipeline.smk"
-include: "rules/ldpred2_pipeline.smk"
+include: "rules/ldpred2_pipeline_chrom.smk"
 include: "rules/gwas.smk"
 
 # Target rule
