Finalize integrating chromosome separated analysis

--- a/.test/config_public-data3_hg38.yaml
+++ b/.test/config_public-data3_hg38.yaml
@@ -37,8 +37,8 @@ prs_algorithms:
   lassosum2:
     activate: true
   prscs:
-    activate: false
+    activate: true
   sct:
-    activate: false
+    activate: true
   sbayesr:
     activate: false
