--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -25,8 +25,8 @@ include: "rules/gwas.smk"
 # Target rule
 rule all:
   input:
-    target_rule_preproc(), 
-    # target_rule_preproc_bychr(),
+    # target_rule_preproc(), 
+    target_rule_preproc_bychr(),
     # "data/geno/qc_geno_all_map_gendist.rds",
     target_rule_gwas(),
     target_rule_prs(),
