--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -37,7 +37,8 @@ rule all:
 rule all_plots:
   input:
     target_rule_plots()
-    
+
 # TODO: Add export of variants used for computation of PRS
+# TODO: Add algorithm based parameters to set
 # TODO: Adapt pipeline to work with sBayesR
 # TODO: Add sBayesRS pipeline
